Support MathJax m: and m3: namespace prefix

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="" xmlns:m="http://www.w3.org/1998/Math/MathML">
+<html lang=""
+  xmlns:m="http://www.w3.org/1998/Math/MathML"
+  xmlns:m3="http://www.w3.org/1998/Math/MathML">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
