Move styles out of pci.html

--- a/public/assets/pci/pci.html
+++ b/public/assets/pci/pci.html
@@ -4,72 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<style>
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  --blue: #3d8ef8;
-  --indigo: #564ab1;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --red: #fb4d53;
-  --orange: #f1734f;
-  --yellow: #f1b44c;
-  --green: #11c46e;
-  --teal: #008080;
-  --cyan: #0db4d6;
-  --rose: #ffd0ff;
-  --lblue: #add8e6;
-  --lchiffon: #fffacd;
-  --white: #fff;
-  --gray: #7c8a96;
-  --gray-dark: #343a40;
-  --primary: #3d8ef8;
-  --success: #11c46e;
-  --info: #0db4d6;
-  --warning: #f1b44c;
-  --danger: #fb4d53;
-  --light: #eff2f7;
-  --lighter: #f5f5f5;
-  --dark: #343a40;
-  --darker: #212529;
-  --black: #000;
-  --breakpoint-xs: 0;
-  --breakpoint-sm: 576px;
-  --breakpoint-md: 768px;
-  --breakpoint-lg: 992px;
-  --breakpoint-xl: 1200px;
-  --font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --foreground: var(--darker);
-  --background: var(--white);
-  --secondary: #dbdbdb;
-  --secondary-complement: var(--darker);
-  --hr-border: 1px solid var(--black);
-  --table-border-color: var(--black);
-  --well-bg: #f5f5f5;
-  --well-border: 1px solid #e3e3e3;
-  --well-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  --bs-body-font-size: 1rem;
-  --bs-body-font-weight: 400;
-  --bs-body-line-height: 1.6;
-
-  margin: 0;
-  font-family: var(--font-family-sans-serif);
-  color: var(--foreground);
-  background-color: var(--background);
-  font-size: var(--bs-body-font-size);
-  line-height: var(--bs-body-line-height);
-  font-weight: var(--bs-body-font-weight);
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(black, 0);
-}
-</style>
+<link rel="stylesheet" href="./css/styles.css">
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
   integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg=="
