Add debug PCI Context Configuration

--- a/public/assets/pci/pci.html
+++ b/public/assets/pci/pci.html
@@ -345,6 +345,8 @@ const QTI_PCI_API = {
         status: 'interacting'
       };
 
+      console.log('[PCI Context] Configuration: ', configuration)
+
       // Launch it with the provided parameters and a configuration!
       ctx.getInstance(typeIdentifier, dom, configuration, state);
 	  }.bind(this));
